Textfield: Fixed high contrast border and textarea font family

--- a/packages/office-ui-fabric-react/src/components/TextField/TextField.scss
+++ b/packages/office-ui-fabric-react/src/components/TextField/TextField.scss
@@ -162,6 +162,7 @@ $field-error-color: $errorTextColor;
 
 .rootIsBorderless .fieldGroup {
   border-color: transparent;
+  border-width: 0;
 }
 
 //== Modifier: Single line (default), underlined
@@ -196,7 +197,7 @@ $field-error-color: $errorTextColor;
 
   .fieldGroup {
     flex: 1 1 0px;
-    border: 0;
+    border-width: 0;
 
     @include ms-text-align(left);
   }
